src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/NVShadingRateImage_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVShadingRateImage_StringErrorContext.class */
public final class NVShadingRateImage_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glBindShadingRateImageNV(I)V", "net/labymod/core/laby3d/opengl/error/generated/NVShadingRateImageErrorContext");
        methods.put("nglShadingRateImagePaletteNV(IIIJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVShadingRateImageErrorContext");
        methods.put("glShadingRateImagePaletteNV(IILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVShadingRateImageErrorContext");
        methods.put("nglGetShadingRateImagePaletteNV(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVShadingRateImageErrorContext");
        methods.put("glGetShadingRateImagePaletteNV(IILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVShadingRateImageErrorContext");
        methods.put("glShadingRateImageBarrierNV(Z)V", "net/labymod/core/laby3d/opengl/error/generated/NVShadingRateImageErrorContext");
        methods.put("glShadingRateSampleOrderNV(I)V", "net/labymod/core/laby3d/opengl/error/generated/NVShadingRateImageErrorContext");
        methods.put("nglShadingRateSampleOrderCustomNV(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVShadingRateImageErrorContext");
        methods.put("glShadingRateSampleOrderCustomNV(IILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVShadingRateImageErrorContext");
        methods.put("nglGetShadingRateSampleLocationivNV(IIIJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVShadingRateImageErrorContext");
        methods.put("glGetShadingRateSampleLocationivNV(IIILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVShadingRateImageErrorContext");
        methods.put("glShadingRateImagePaletteNV(II[I)V", "net/labymod/core/laby3d/opengl/error/generated/NVShadingRateImageErrorContext");
        methods.put("glGetShadingRateImagePaletteNV(II[I)V", "net/labymod/core/laby3d/opengl/error/generated/NVShadingRateImageErrorContext");
        methods.put("glShadingRateSampleOrderCustomNV(II[I)V", "net/labymod/core/laby3d/opengl/error/generated/NVShadingRateImageErrorContext");
        methods.put("glGetShadingRateSampleLocationivNV(III[I)V", "net/labymod/core/laby3d/opengl/error/generated/NVShadingRateImageErrorContext");
        return methods;
    }
}
